Fix slider img on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,6 @@ margin-right: 10px;
 
 .main-slider img {
   min-width:100%;
-  min-height:100%;
   max-width:100%;
 }
 /* ==============
